--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       "@type": "Person",
       "name": "Joe Smith",
       "jobTitle": "Candidate for Lemon Grove City Council",
-      "url": "https://www.joesmithforlemongrove.com",
+      "url": "https://www.joesmithofficial.com",
       "sameAs": [
         "https://www.linkedin.com/in/joe-smith4457",
-        "https://www.linebackerdad.com"
+        "https://www.joesmithofficial.com"
       ]
     }
   </script>
