--- a/about.html
+++ b/about.html
@@ -166,6 +166,13 @@
           class="px-5 py-2 rounded-full text-sm font-semibold text-slate-500 hover:text-navy hover:bg-gray-50 transition-all">Contact</a>
       </div>
 
+      <div class="hidden md:flex items-center gap-4">
+        <a href="contact.html"
+          class="bg-navy hover:bg-navy-light text-white text-sm font-bold py-3 px-8 rounded-full shadow-lg shadow-navy/20 transition-all hover:scale-105 active:scale-95">
+          Join the Movement
+        </a>
+      </div>
+
       <button class="md:hidden text-navy text-xl"
         onclick="document.getElementById('mobile-menu').classList.toggle('hidden')">
         <i class="fa-solid fa-bars"></i>
@@ -181,6 +188,7 @@
       <a href="about.html" class="text-lg font-medium text-slate-600">About</a>
       <a href="experience.html" class="text-lg font-medium text-slate-600">Experience</a>
       <a href="contact.html" class="text-lg font-medium text-slate-600">Contact</a>
+      <a href="contact.html" class="bg-navy text-white text-center py-3 rounded-xl font-bold mt-2">Join the Movement</a>
     </div>
   </nav>
 
