--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <div class="hidden md:flex items-center gap-4">
         <a href="contact.html"
           class="bg-navy hover:bg-navy-light text-white text-sm font-bold py-3 px-8 rounded-full shadow-lg shadow-navy/20 transition-all hover:scale-105 active:scale-95">
-          Donate
+          Join the Movement
         </a>
       </div>
 
@@ -221,7 +221,7 @@
       <a href="about.html" class="text-lg font-medium text-slate-600">About</a>
       <a href="experience.html" class="text-lg font-medium text-slate-600">Experience</a>
       <a href="contact.html" class="text-lg font-medium text-slate-600">Contact</a>
-      <a href="contact.html" class="bg-navy text-white text-center py-3 rounded-xl font-bold mt-2">Donate Today</a>
+      <a href="contact.html" class="bg-navy text-white text-center py-3 rounded-xl font-bold mt-2">Join the Movement</a>
     </div>
   </nav>
 
