--- a/contact.html
+++ b/contact.html
@@ -170,10 +170,14 @@
         <div class="max-w-7xl mx-auto px-6 h-20 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3">
                 <div
-                    class="h-10 w-10 rounded-xl bg-navy text-white flex items-center justify-center text-lg font-bold shadow-lg">
-                    JS</div>
-                <div class="flex flex-col"><span class="text-navy font-bold leading-none">JOE SMITH</span><span
-                        class="text-xs text-slate-500 uppercase tracking-widest">Council</span></div>
+                    class="h-10 w-10 rounded-xl bg-navy text-white flex items-center justify-center text-lg font-bold shadow-lg group-hover:bg-gold transition-colors duration-300">
+                    JS
+                </div>
+                <div class="flex flex-col">
+                    <span class="text-navy font-bold text-lg leading-none tracking-tight">JOE SMITH</span>
+                    <span class="text-slate-500 text-[10px] font-bold uppercase tracking-widest mt-1">Lemon Grove
+                        Council</span>
+                </div>
             </a>
 
             <div class="hidden md:flex gap-1">
