Updated webhooks and form functionality

--- a/contact.html
+++ b/contact.html
@@ -304,9 +304,12 @@
                         class="w-full px-4 py-3 rounded-xl flex-grow" required></textarea>
 
                     <!-- Hidden fields -->
+                    <input type="hidden" name="_webhook"
+                        value="https://hook.us2.make.com/pwd19xc2dks5dujl6y12r1dgja6ur1db">
+                    <input type="hidden" name="form_source" value="contact_get_involved">
+
                     <input type="hidden" name="_subject" value="New VOLUNTEER / CONTACT submission">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="form_source" value="contact_get_involved">
                     <input type="hidden" name="_autoresponse"
                         value="Thank you for reaching out to Joe Smith’s campaign! Our team has received your message and will follow up shortly.">
                     <input type="hidden" name="_captcha" value="false">
@@ -336,11 +339,13 @@
                     class="w-full md:w-40 px-6 py-4 rounded-full input-glass text-lg placeholder-slate-500" required>
 
                 <!-- Hidden fields -->
+                <input type="hidden" name="_webhook" value="https://hook.us2.make.com/pwd19xc2dks5dujl6y12r1dgja6ur1db">
+                <input type="hidden" name="form_source" value="join_the_movement">
+
                 <input type="hidden" name="_subject" value="New JOIN THE MOVEMENT signup">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_autoresponse"
                     value="Thank you for joining the movement! We will keep you updated on Joe Smith’s campaign.">
-                <input type="hidden" name="form_source" value="join_the_movement">
                 <input type="hidden" name="_captcha" value="false">
 
                 <button type="submit"
